# gemini-python

./: main.py  pyproject.toml
src/: paths.py  settings.py
src/genai/: genai.py
